crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__slice-3.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"a[:1:]\")"
---
Slice(
    Slice {
        value: Var(
            "a",
        ) from virtual:<test>:0-1,
        slice: SliceDesc {
            start: None,
            end: Some(
                Num(
                    1.0,
                ) from virtual:<test>:3-4,
            ),
            step: None,
        },
    },
) from virtual:<test>:0-6
