crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__slice-5.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"str[:len - 1]\")"
---
Slice(
    Slice {
        value: Var(
            "str",
        ) from virtual:<test>:0-3,
        slice: SliceDesc {
            start: None,
            end: Some(
                BinaryOp(
                    BinaryOp {
                        lhs: Var(
                            "len",
                        ) from virtual:<test>:5-8,
                        op: Sub,
                        rhs: Num(
                            1.0,
                        ) from virtual:<test>:11-12,
                    },
                ) from virtual:<test>:5-12,
            ),
            step: None,
        },
    },
) from virtual:<test>:0-13
