crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__string_escaping-3.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(r#\"'\\\\\\\\'\"#)"
---
Str(
    "\\\\",
) from virtual:<test>:0-6
