crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__string_escaping.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(r#\"\"Hello, \\\"world\\\"!\"\"#)"
---
Str(
    "Hello, \"world\"!",
) from virtual:<test>:0-19
