crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__string_verbantim.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(r#\"@\"Hello\\n\"\"World\"\"\"\"#)"
---
Str(
    "Hello\\n\"World\"",
) from virtual:<test>:0-19
