crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__suffix-2.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"std(2)\")"
---
Apply(
    Var(
        "std",
    ) from virtual:<test>:0-3,
    ArgsDesc {
        unnamed: [
            Num(
                2.0,
            ) from virtual:<test>:4-5,
        ],
        named: [],
    },
    false,
) from virtual:<test>:0-6
