crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__suffix-3.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"std.test(2)\")"
---
Apply(
    Index {
        indexable: Var(
            "std",
        ) from virtual:<test>:0-3,
        parts: [
            IndexPart {
                value: Str(
                    "test",
                ) from virtual:<test>:4-8,
            },
        ],
    } from virtual:<test>:0-8,
    ArgsDesc {
        unnamed: [
            Num(
                2.0,
            ) from virtual:<test>:9-10,
        ],
        named: [],
    },
    false,
) from virtual:<test>:0-11
