crates/jrsonnet-parser/src/snapshots/jrsonnet_parser__tests__suffix-4.snap
---
source: crates/jrsonnet-parser/src/lib.rs
expression: "parsep(\"a[b]\")"
---
Index {
    indexable: Var(
        "a",
    ) from virtual:<test>:0-1,
    parts: [
        IndexPart {
            value: Var(
                "b",
            ) from virtual:<test>:2-3,
        },
    ],
} from virtual:<test>:0-4
